--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,20 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+}
+
+.wrapper__btn {
+  width: 150px;
+  height: 100px;
+  font-size: 30px;
+  font-weight: bolder;
+  color: black;
+  background-color: transparent;
+  border-width: 5px;
+  border-radius: 0 15px 0 15px;
+}
