--- a/src/css/common.css
+++ b/src/css/common.css
@@ -28,8 +28,8 @@ img {
   height: 100px;
   font-size: 30px;
   font-weight: bolder;
-  color: black;
-  background-color: transparent;
+  color: whitesmoke;
+  background-color: gray;
   border-width: 5px;
   border-radius: 0 15px 0 15px;
 }
