--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,6 +17,8 @@ img {
   max-width: 100%;
 }
 
+/* Task 1 */
+
 .wrapper {
   display: flex;
   justify-content: center;
@@ -33,3 +35,5 @@ img {
   border-width: 5px;
   border-radius: 0 15px 0 15px;
 }
+
+/* Task 2 */
